<resources>
    <string name="app_name">Sushi Amara</string>
    <string name="resturentname">Sushi Amara</string>
    <string name="youhave">Viele Dank von</string>
    <string name="sort1">Cooking is like love. It should be entered into with abandon or not at all.” -Harriet van Horne</string>
    <string name="sort2">Flowers always make people better, happier, and more helpful; they are sunshine, food and medicine for the soul.</string>
    <string name="store_a">Langenfeld</string>
    <string name="store_b">Leichlingen</string>
    <string name="store_a_address">Hauptstraße 67, \n40764 Langenfeld (Rheinland)</string>
    <string name="store_b_address">Brückenstraße 28, \n42799 Leichlingen</string>
    <string name="nav_drawer_opened">drawer opened</string>
    <string name="nav_drawer_closed">drawer closed</string>
    <string name="home_heder">Home</string>
    <string name="place_heder">Delivery</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log Out</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="a1">Angaben gemäß § 5 TMG\n
SUSHI AMARA GmbH\n
Hauptstraße 67\n
40764 Langenfeld\n
</string>
    <string name="a2">Vertreten durch:\n
SUSHI AMARA GmbH\n
Hauptstraße 67\n
40764 Langenfeld\n
</string>
    <string name="a3">Handelsregister: HRB 92182\n
Registergericht: Amtsgericht Düsseldorf
</string>
    <string name="a4">Kontakt</string>
    <string name="a5">Telefon: +49 (0) 2175 1869932</string>
    <string name="a52">E-Mail: info@sushiamara.de</string>
    <string name="a6">Postadresse</string>
    <string name="a7">Hauptstr.67\n\n40764 Langenfeld (Rheinland)</string>
    <string name="a8">Umsatzsteuer</string>
    <string name="a9">Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz:
DE340781014
</string>
    <string name="a10">Streitschlichtung</string>
    <string name="a11">Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:</string>
    <string name="a12">https://ec.europa.eu/consumers/odr.</string>
    <string name="a13">Unsere E-Mail-Adresse finden Sie oben im Impressum.</string>
    <string name="a14">Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</string>
    <string name="a15">Haftung für Inhalte\nAls Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.</string>
    <string name="a16">Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</string>
    <string name="a17">Haftung für Links\nUnser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</string>
    <string name="a18">Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</string>
    <string name="a19">Urheberrecht\nDie durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.</string>
    <string name="a20">Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</string>
    <string name="a21">Konzept, Design &amp; Realisierung der Website\nInternetagentur Webviduell, Langenfeld</string>
    <string name="a22">info@webviduell.com</string>
    <string name="a24">www.webviduell.com</string>
    <string name="dot">●</string>
    <string name="b1">1. Datenschutz auf einen Blick</string>
    <string name="b2">Allgemeine Hinweise\n
Die folgenden Hinweise geben einen einfachen Überblick darüber, was mit Ihren personenbezogenen Daten passiert, wenn Sie unsere Website besuchen. Personenbezogene Daten sind alle Daten, mit denen Sie persönlich identifiziert werden können. Ausführliche Informationen zum Thema Datenschutz entnehmen Sie unserer unter diesem Text aufgeführten Datenschutzerklärung.
</string>
    <string name="b3">Datenerfassung auf unserer Website &amp; App.</string>
    <string name="b4">Wer ist verantwortlich für die Datenerfassung auf dieser Website?</string>
    <string name="b5">Die Datenverarbeitung auf dieser Website erfolgt durch den Websitebetreiber. Dessen Kontaktdaten können Sie dem Impressum dieser Website entnehmen.</string>
    <string name="b6">Wie erfassen wir Ihre Daten?</string>
    <string name="b7">Ihre Daten werden zum einen dadurch erhoben, dass Sie uns diese mitteilen. Hierbei kann es sich z.B. um Daten handeln, die Sie in ein Kontaktformular eingeben.</string>
    <string name="b8">Andere Daten werden automatisch beim Besuch der Website durch unsere IT-Systeme erfasst. Das sind vor allem technische Daten (z.B. Internetbrowser, Betriebssystem oder Uhrzeit des Seitenaufrufs). Die Erfassung dieser Daten erfolgt automatisch, sobald Sie unsere Website betreten.</string>
    <string name="b9">Wofür nutzen wir Ihre Daten?</string>
    <string name="b10">Ein Teil der Daten wird erhoben, um eine fehlerfreie Bereitstellung der Website zu gewährleisten. Andere Daten können zur Analyse Ihres Nutzerverhaltens verwendet werden.</string>
    <string name="b11">Welche Rechte haben Sie bezüglich Ihrer Daten?</string>
    <string name="b12">Sie haben jederzeit das Recht unentgeltlich Auskunft über Herkunft, Empfänger und Zweck Ihrer gespeicherten personenbezogenen Daten zu erhalten. Sie haben außerdem ein Recht, die Berichtigung, Sperrung oder Löschung dieser Daten zu verlangen. Hierzu sowie zu weiteren Fragen zum Thema Datenschutz können Sie sich jederzeit unter der im Impressum angegebenen Adresse an uns wenden. Des Weiteren steht Ihnen ein Beschwerderecht bei der zuständigen Aufsichtsbehörde zu.</string>
    <string name="b13">Außerdem haben Sie das Recht, unter bestimmten Umständen die Einschränkung der Verarbeitung Ihrer personenbezogenen Daten zu verlangen. Details hierzu entnehmen Sie der Datenschutzerklärung unter „Recht auf Einschränkung der Verarbeitung“.</string>
    <string name="b14">Analyse-Tools und Tools von Drittanbietern
Beim Besuch unserer Website kann Ihr Surf-Verhalten statistisch ausgewertet werden. Das geschieht vor allem mit Cookies und mit sogenannten Analyseprogrammen. Die Analyse Ihres Surf-Verhaltens erfolgt in der Regel anonym; das Surf-Verhalten kann nicht zu Ihnen zurückverfolgt werden. Sie können dieser Analyse widersprechen oder sie durch die Nichtbenutzung bestimmter Tools verhindern. Detaillierte Informationen dazu finden Sie in der folgenden Datenschutzerklärung.
</string>
    <string name="b15">Sie können dieser Analyse widersprechen. Über die Widerspruchsmöglichkeiten werden wir Sie in dieser Datenschutzerklärung informieren.</string>
    <string name="b16">2. Allgemeine Hinweise und Pflichtinformationen</string>
    <string name="b17">Datenschutz\nDie Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</string>
    <string name="b18">Wenn Sie diese Website benutzen, werden verschiedene personenbezogene Daten erhoben. Personenbezogene Daten sind Daten, mit denen Sie persönlich identifiziert werden können. Die vorliegende Datenschutzerklärung erläutert, welche Daten wir erheben und wofür wir sie nutzen. Sie erläutert auch, wie und zu welchem Zweck das geschieht.</string>
    <string name="b19">Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</string>
    <string name="b20">Hinweis zur verantwortlichen Stelle\nDie verantwortliche Stelle für die Datenverarbeitung auf dieser Website ist:</string>
    <string name="b21">SUSHI AMARA GmbH\n Hauptstr. 67,40764 Langenfeld (Rheinland)</string>
    <string name="b22">Telefon: +49 (0) 2173 1625015</string>
    <string name="b23">E-Mail: info@sushiamara.de</string>
    <string name="b24">Verantwortliche Stelle ist die natürliche oder juristische Person, die allein oder gemeinsam mit anderen über die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.B. Namen, E-Mail-Adressen o. Ä.) entscheidet.</string>
    <string name="b30">Widerruf Ihrer Einwilligung zur Datenverarbeitung
Viele Datenverarbeitungsvorgänge sind nur mit Ihrer ausdrücklichen Einwilligung möglich. Sie können eine bereits erteilte Einwilligung jederzeit widerrufen. Dazu reicht eine formlose Mitteilung per E-Mail an uns. Die Rechtmäßigkeit der bis zum Widerruf erfolgten Datenverarbeitung bleibt vom Widerruf unberührt.
</string>
    <string name="b31">Widerspruchsrecht gegen die Datenerhebung in besonderen Fällen sowie gegen Direktwerbung (Art. 21 DSGVO)</string>
    <string name="profile">Kundenkonto</string>
    <string name="home">Home</string>
    <string name="search_food">Speisekarte</string>
    <string name="space_booking">Tisch Reservieren</string>
    <string name="contact">Kontakt</string>
    <string name="impressum">Impressum</string>
    <string name="datenschutzerklarung">Datenschutz</string>
    <string name="order_online">ONLINE BESTELLEN</string>
    <string name="pickup">ABHOLUNG</string>
    <string name="delivery">LIEFERUNG</string>
    <string name="your_current_location_will_be_fetched_automatically">Ihr aktueller Standort wird automatisch abgerufen</string>
    <string name="open_now">jetzt geöffnet</string>
</resources>