<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Impressum">

    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:textColor="#000"
                android:textStyle="bold"/>

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textColor="#000"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:textColor="#000"
                />


            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4"
                android:textColor="#000"
                android:textStyle="bold"/>

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:textColor="#000"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a52"
                android:textColor="#000"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a6"
                android:textColor="#000"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a7"
                android:textColor="#000"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a8"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a9"
                android:textColor="#000"
                />


            <TextView
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a10"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a11"
                android:textColor="#000"
                />

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a12"
                android:textColor="#000"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a13"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a14"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a15"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a16"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a17"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a18"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a19"
                android:textColor="#000"
                />

            <TextView
                android:layout_marginBottom="42dp"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a20"
                android:textColor="#000"
                />




        </LinearLayout>
    </ScrollView>

</LinearLayout>